emissão com revisão do mestre dos magos

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <h1>Cálculo de Áreas</h1>
     <form id="areaForm">
         <label for="ambienteNome">Nome do Ambiente:</label>
-        <input type="text" id="ambienteNome" placeholder="Digite o nome do ambiente" required><br><br>
+        <input type="text" id="ambienteNome" placeholder="Digite o nome do ambiente" required maxlength="50"><br><br>
 
         <label for="areaNome">Nome da Superfície:</label>
-        <input type="text" id="areaNome" placeholder="Ex: Piso, Parede Frontal" required><br><br>
+        <input type="text" id="areaNome" placeholder="Ex: Piso, Parede Frontal" required maxlength="50"><br><br>
 
         <label for="altura">Altura (em metros):</label>
-        <input type="text" id="altura" placeholder="Altura" required><br><br>
+        <input type="text" id="altura" placeholder="5,00" required maxlength="50><br><br>
 
-        <label for="largura">Largura (em metros):</label>
-        <input type="text" id="largura" placeholder="Largura" required><br><br>
+        <label for= "largura">Largura (em metros):</label>
+        <input type="text" id="largura" placeholder="10,00" required maxlength="50"><br><br>
 
         <button type="button" id="addArea">Adicionar Área</button>
         <button type="button" id="removeAmbiente">Remover Ambiente</button>
